# GizzlyVaultTones

./: .gitignore  CMakeLists.txt  DelegateAudio.qml  DelegateText.qml  ImageButtons.qml  Main.qml  Tasks.md  copyfiles.cpp  copyfiles.h  h --force origin TextPlaylist  librarybackend.cpp  librarybackend.h  librarysongnotes.cpp  librarysongnotes.h  main.cpp  musicplayer.cpp  musicplayer.h  notesclass.cpp  notesclass.h  notesmusicplayer.cpp  notesmusicplayer.h  palettemaster.cpp  palettemaster.h  proxylibrary.cpp  proxylibrary.h  proxylibrarybackend.cpp  proxylibrarybackend.h  savejson.cpp  savejson.h  sources.qrc
QML/Textplaylist/: DelegateFooter.qml  DelegateText.qml  FooterItem.qml  MusicAnnotator.qml  MusicPlayerController.qml  TextPlaylist.qml
QML/Utilities/: IconButtonsFinal.qml  ImageButton.qml  Pallete.qml
